# evidence-gated-agent-substrate

./: ACCESS_AND_HOSTING.md  ARTIFACT_CARD.md  CLAIMS_AND_EVIDENCE.md  INSTALL.md  LICENSES.md  MAINTENANCE.md  README.md  README_FIRST.md  REPRODUCE.md  RESPONSIBLE_USE.md  RUNME.md  THIRD_PARTY_ASSETS.md  large_artifacts_manifest.md  validate_bundle.py
code/: README.md  THIRD_PARTY_ASSETS.md  pyproject.toml  release_manifest.yaml
code/adapters/: README.md  init_.py
code/adapters/browsergym/: README.md
code/adapters/miniwob/: README.md  config.py  env.py  evidence.py  init_.py  llm_real_runner.py  real_config.py  real_env.py  real_runner.py  real_tasks.py  replay.py  runner.py  tasks.py
code/adapters/swe_gym/: README.md  config.py  env.py  evidence.py  init_.py  llm_patch_provider.py  real_config.py  real_swebench_harness.py  real_task_loader.py  real_verifier.py  replay.py  runner.py  tasks.py  (+1 more)
code/collectors/: README.md
code/evaluators/: README.md
code/manifests/: README.md  local_paths.example.yaml  local_paths.yaml  replay_classes.yaml  upstream_assets.yaml
code/runner/: README.md  batch_run.py  event_bus.py  init_.py  replay_run.py  run_context.py  single_run.py
code/runtime/: README.md  evidence_gate.py  external_model_localizer.py  external_paths.py  model_backend_client.py  model_registry.py  phase_reporting.py  real_backend_validation.py  repo_probe.py  run_index.py
code/tests/: test_decision_robustness_budget9_v2.py  test_neurips2026_ed_submission_package_current.py  test_webarena_real_controller_pilot.py
code/trace/: README.md  init_.py
(+148 files in other folders)
